src/index.css
/* ... */
/* Code  {{{3 */

.figure.is-code {
  position: relative;
}

.figure.is-code[data-language]::before {
  content: attr(data-language);
  position: absolute;
  inset-block-start: 0;
  inset-inline-end: calc(var(--line-feed) / 2);
  line-height: 1.0;
  padding-block: 2px;
  padding-inline: 0.5ch;
  border-end-start-radius: 4px;
  border-end-end-radius: 4px;
  background-color: var(--red-6);
  color: var(--red-1);
  font-family: var(--font-display);
  font-size: var(--text-x-small);
}

.figure-body > pre {
  padding: calc(var(--line-feed) / 2);
  margin-block-end: 0;
  color: var(--gray-1);
  background-color: var(--gray-10);
  overflow-x: auto;
  overflow-x: overlay;
}

.figure-body > pre::-webkit-scrollbar {
  inline-size: calc(var(--line-feed) / 2);
  block-size: calc(var(--line-feed) / 2);
}

.figure-body > pre::-webkit-scrollbar-thumb {
  background-clip: padding-box;
  background-color: var(--gray-8);
  border: 4px solid transparent;
}

.figure-body > pre > code {
  all: unset;
}

/* Blockquote  {{{3 */

.figure-body > blockquote {
  position: relative;
  margin-block-end: 0;
  padding-block: var(--line-feed);
  padding-inline: calc(var(--line-feed) / 2);
  background-color: var(--red-2);
  background-image: linear-gradient(var(--red-5), var(--red-5)),
                    linear-gradient(var(--red-5), var(--red-5)),
                    linear-gradient(var(--red-5), var(--red-5)),
                    linear-gradient(var(--red-5), var(--red-5));
  background-position: top left, top right, bottom left, bottom right;
  background-size: var(--line-feed) 1px,
                   calc(100% - var(--line-feed) * 2.5) 1px,
                   calc(100% - var(--line-feed) * 2.5) 1px,
                   var(--line-feed) 1px;
  background-repeat: no-repeat;
}

.figure-body > blockquote::before,
.figure-body > blockquote::after {
  position: absolute;
  inline-size: calc(var(--line-feed) * 1.5);
  color: var(--red-6);
  font-size: 2.5rem;
  font-weight: bold;
  text-align: center;
}

.figure-body > blockquote::before {
  content: '\201c';
  inset-block-start: 0;
  inset-inline-start: var(--line-feed);
  transform: translateY(-25%);
}

.figure-body > blockquote::after {
  content: '\201d';
  inset-block-end: 0;
  inset-inline-end: var(--line-feed);
  transform: translateY(75%);
}

.figure-body > blockquote > :last-child {
  margin-block-end: 0;
}

/* Table  {{{3 */

.figure-body > table {
  max-inline-size: 100%;
  margin-block-end: 0;
  margin-inline: auto;
  font-size: var(--text-small);
}

.figure-body > table > tr > :is(td, th),
.figure-body > table > :is(tbody, thead, tfoot) > tr > :is(td, th) {
  padding-block: calc(var(--line-feed) / 4);
  padding-inline: 1ch;
  border: 0 solid var(--gray-10);
}

.figure-body > table > thead > tr > :is(td, th) {
  padding-block-end: calc(var(--line-feed) / 4 - 2px);
  border-block-end-width: 2px;
}

.figure-body > table > tr > :is(td, th),
.figure-body > table > tbody > tr > :is(td, th) {
  padding-block-end: calc(var(--line-feed) / 4 - 1px);
  border-block-end-width: 1px;
}

.figure-body > table > tfoot > tr > :is(td, th) {
  padding-block-start: calc(var(--line-feed) / 4 - 2px);
  border-block-start-width: 2px;
}

/* Image  {{{3 */

.figure.is-image {
  font-family: var(--font-display);
}

.figure-body > :is(img, svg) {
  display: block;
  margin-inline: auto;
  max-inline-size: 100%;
  block-size: auto;
}

/* .footnote  {{{2 */

.footnote {
  display: flex;
  margin-block: 0 var(--line-feed);
  font-family: var(--font-display);
  font-size: var(--text-small);
}

.footnote:has(+ .footnote) {
  margin-block-end: 0;
}

.footnote-label {
  box-sizing: border-box;
  inline-size: calc(var(--line-feed) * 1.5);
  text-align: end;
  font-variant-numeric: tabular-nums;
}

.footnote-label::after {
  content: ' ';
  white-space: pre;
}

a.footnote-back-reference {
  text-decoration: none;
}

.footnote-body {
  flex: 1 1;
}

.footnote-body > :last-child {
  margin-block-end: 0;
}

/* .icon  {{{2 */

.icon {
  fill: currentColor;
  width: 1.5rem;
  height: 1.5rem;
}

/* .inline-list  {{{2 */

.inline-list {
  display: flex;
  flex-wrap: wrap;
  list-style: none;
  padding: 0;
}

.inline-list.is-vertical {
  writing-mode: vertical-rl;
}

.inline-list.is-center {
  justify-content: center;
}

.inline-list.is-spaced-small {
  column-gap: 0.5ch;
}

.inline-list.is-spaced-medium {
  column-gap: 1ch;
}

.inline-list.is-spaced-large {
  column-gap: 1.5ch;
}

:where(.inline-list.is-separated) > .inline-list-item + .inline-list-item::before {
  content: '·';
  color: var(--gray-7);
  margin-inline: 0.5ch;
}

.inline-list-separator {
  align-self: center;
  inline-size: 1px;
  block-size: calc(var(--line-feed) - 2px);
  margin-inline: 0.5ch;
  background-color: var(--gray-5);
  background-clip: content-box;
}

/* .note  {{{2 */

.note {
  padding-block: calc(var(--line-feed) / 2);
  padding-inline: calc(var(--line-feed) / 2 - 4px)
                  calc(var(--line-feed) / 2);
  margin-block: 0 var(--line-feed);
  border-inline-start: 4px solid transparent;
}

.note.is-note {
  --current-bg: var(--blue-2);
  background-color: var(--current-bg);
  border-color: var(--blue-5);
}

.note.is-warning {
  --current-bg: var(--yellow-2);
  background-color: var(--current-bg);
  border-color: var(--yellow-5);
}

.note.is-callout {
  --current-bg: var(--red-2);
  background-color: var(--current-bg);
  border-color: var(--red-5);
}

.note-caption {
  font-weight: bold;
  font-family: var(--font-display);
}

.note-caption::before {
  font-family: var(--font-emoji);
  margin-inline-end: 0.25ch;
}

.note.is-note .note-caption::before {
  content: '💡';
}

.note.is-warning .note-caption::before {
  content: '⚠';
}

.note.is-callout .note-caption::before {
  content: '🚨';
}

.note-body > :last-child {
  margin-block-end: 0;
}

/* .tag  {{{2 */

.tag-list {
  display: flex;
  list-style: none;
  padding: 0;
  margin: 0;
  column-gap: 0.5ch;
  row-gap: calc(var(--line-feed) / 4);
  flex-wrap: wrap;
}
/* ... */

